		- For teams tournaments, the combined score for the teams is used for the ranking.
		- Enable the score window via the "Sc" button on the Vessel Switcher window.
		- Use the "UI" button to keep the window visible even when the rest of the UI is disabled (F2).
		- Use the "±" buttons to adjust the font size.
		- Use the "W" button to adjust the score weights.
		- Left click and drag the drag handle to resize the window.
		- Right click the drag handle to switch to auto-adjusting height.
		- Scores update after each round (not heat) in a ranked tournament.
	- The tournament.state file uses a new format (recursively encoded JSON due to Unity's limited JSON functionality), contains a lot more information and isn't compatible with older tournament.state files.
		- A script (parse_tournament_state.py) can convert the tournament.state file to proper JSON (tournament.json) and back again for ease of editing.
	- Fix a minor bug in the tournament log parsing script where wins weren't always being counted for the score.
	- Make the saving of backup tournaments optional (hidden setting in settings.cfg).
	- Add NPC support for FFA-RNG tournaments (both ranked and non-ranked).
		- To use NPCs, create a "NPCs" folder in the folder for the tournament (e.g., "AutoSpawn/MyTournament/NPCs"), add the NPC files to this folder, then set the "NPCs Per Heat" slider to the desired number of NPCs.
		- NPC files will be reused as necessary to provide the appropriate number of randomly selected NPCs each heat.
		- When generating heats, the number of NPCs is taken into account for the total number of vessels per heat (e.g., 8 vessels per heat with 2 NPCs per heat would give 6 players + 2 NPCs in each heat).
		- The "Tournament Scores" window will only show the scores for non-NPCs.
- Detectors
	- Add settings toggle ASPECTED_RCS that enables real-time RCS evaluation based on the target aircraft's azimuth and elevation relative to the radar evaluating it.