@@ -387,6 +387,8 @@ Localization
         // Scores
         #LOC_BDArmory_BDAScores_Title = Tournament Scores
         #LOC_BDArmory_BDAScores_Weights = Score Weights
+        #LOC_BDArmory_BDAScores_Round = Round
+        #LOC_BDArmory_BDAScores_Heat = Heat
 
         // Custom Spawn Templates
         #LOC_BDArmory_Settings_CustomSpawnTemplateOptions = Spawn Template Options
