@@ -28,6 +28,7 @@
 		- Use the "UI" button to keep the window visible even when the rest of the UI is disabled (F2).
 		- Use the "±" buttons to adjust the font size.
 		- Use the "W" button to adjust the score weights.
+		- Use the "T" button to switch between individual and team scores for teams competitions.
 		- Left click and drag the drag handle to resize the window.
 		- Right click the drag handle to switch to auto-adjusting height.
 		- Scores update after each round (not heat) in a ranked tournament.
@@ -40,6 +41,7 @@
 		- NPC files will be reused as necessary to provide the appropriate number of randomly selected NPCs each heat.
 		- When generating heats, the number of NPCs is taken into account for the total number of vessels per heat (e.g., 8 vessels per heat with 2 NPCs per heat would give 6 players + 2 NPCs in each heat).
 		- The "Tournament Scores" window will only show the scores for non-NPCs.
+	- Add an "auto" setting for the "Vessels Per Team Per Heat" in teams tournaments where the teams will simply be all the craft files in each team's folder.
 - Detectors
 	- Add settings toggle ASPECTED_RCS that enables real-time RCS evaluation based on the target aircraft's azimuth and elevation relative to the radar evaluating it.
 		- Enable from the BDA settings menu under Missile & CM settings: "Real-Time Aspected RCS."
